Don't use Lato Thin due to readability issues

--- a/app/components/ui/sunrise-step/header/styles.scss
+++ b/app/components/ui/sunrise-step/header/styles.scss
@@ -28,7 +28,7 @@
 	h2 {
 		font-family: $body-font;
 		font-size: 2rem;
-		font-weight: 200;
+		font-weight: 300;
 		line-height: 1.4;
 		margin-top: 10px;
 
